--- a/app/src/main/res/drawable/ic_broken_image.xml
+++ b/app/src/main/res/drawable/ic_broken_image.xml
@@ -16,9 +16,9 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="#A9A9AC"
+    android:width="60dp"
+    android:height="60dp"
+    android:tint="#727272"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
