--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,26 +18,32 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
-        <item name="android:windowBackground">@color/background</item>
+
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
+
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/primaryVariant</item>
-        <item name="colorPrimaryDark">@color/primaryDark</item>
         <item name="colorOnPrimary">@color/onPrimary</item>
-        <item name="colorAccent">@color/accent</item>
+
         <item name="colorSecondary">@color/secondary</item>
         <item name="colorSecondaryVariant">@color/secondaryVariant</item>
         <item name="colorOnSecondary">@color/onSecondary</item>
+
+        <item name="colorPrimaryDark">@color/primaryDark</item>
+        <item name="colorSurface">?colorPrimaryDark</item>
+        <item name="colorAccent">@color/accent</item>
+
     </style>
 
-    <style name="AppbarTheme" parent="AppTheme">
-        <item name="colorSurface">@color/primaryDark</item>
-        <item name="colorOnSurface">@color/primary</item>
+    <style name="PrimaryOnSurface">
+        <item name="colorOnSurface">?colorPrimary</item>
     </style>
-    <style name="BottomNavTheme" parent="AppTheme">
-        <item name="colorPrimary">@color/secondary</item>
+    <style name="SecondaryAsPrimary">
+        <item name="colorPrimary">?colorSecondary</item>
     </style>
 
-    <style name="ExpandedTitleTextAppearance" parent="TextAppearance.MaterialComponents.Headline4"/>
-    <style name="CollapsedTitleTextAppearance" parent="TextAppearance.MaterialComponents.Headline2"/>
+    <style name="AccentElevationOverlay">  <item name="elevationOverlayColor">?colorAccent</item> </style>
+    <style name="PrimaryElevationOverlay"> <item name="elevationOverlayColor">?colorPrimary</item> </style>
 
 </resources>
